# rocket_oxidized

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: lib.rs  main.rs
src/core/: mod.rs
src/core/app/: appstate.rs  mod.rs
src/core/backends/: backend_trait.rs  mod.rs
src/core/error/: mod.rs
src/core/events/: eventsystem.rs  eventtrait.rs  mod.rs
src/core/events/types/: mod.rs  quitevent.rs
src/core/startup/: eventsystem.rs  logging.rs  mod.rs
src/core/startup/eventsystem/: mod.rs
src/core/startup/eventsystem/handlers/: mod.rs  quithandler.rs
src/engine/: status.rs
src/libraries/logger/: log.rs
