[package]
name = "rocket_relaunched"
authors = ["Tim Bishop <bishot3@rpi.edu>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cgmath = "0.18"
colored = "2.1.0"
png = "0.17"
thiserror = "1"
tobj = { version = "3"}
vulkanalia = { version = "0.22.0", features = ["libloading", "provisional", "window"] }
winit = { version = "0.29.9", features = ["rwh_05"] }
