[package]
name = "rocket_oxidized"
version = "0.0.0"
edition = "2021"
authors = ["Tim Bishop <timbishop.csci@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
const_format = "0.2.33"
env_logger = "0.11.5"
lazy_static = "1.5.0"
log = "0.4.22"
